--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -5,10 +5,42 @@
   height: 100%;
 }
 
-* #header {
-  text-align: center;
-  background-color: red;
-  height: 25%;
+* .container {
+  margin: 0 14%;
+}
+
+* header {
+  height: auto;
+  padding: 2px;
+  display: flex;
+  justify-content: space-between;
+}
+
+* header .logo {
+  height: 50%;
+  padding: 20px;
+}
+
+* header .menu ul {
+  list-style-type: none;
+  font-weight: bold;
+  display: flex;
+  line-height: 1000%;
+}
+
+* header .menu ul li {
+  margin: 0 10px;
+}
+
+* header .menu ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+* header .menu ul li :hover {
+  color: #0066ff;
+  border-bottom: 3px solid #0066ff;
+  padding-bottom: 72px;
 }
 
 * #main {
