--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -5,10 +5,47 @@
     box-sizing: border-box;
     height: 100%;
 
-    #header {
-        text-align: center;
-        background-color: red;
-        height: 25%;
+    .container{
+
+        margin: 0 14%;
+    }
+
+    header {
+        height: auto;
+        padding: 2px;
+        display: flex;
+        justify-content: space-between;
+
+        .logo{
+            height: 50%;
+            padding: 20px;
+        }
+
+        .menu {
+
+            ul{
+                list-style-type: none;
+                font-weight: bold;
+                display: flex;
+                line-height: 1000%;
+
+                li {
+                    margin: 0 10px;
+                    
+                    a {
+                        text-decoration: none;
+                        color: black;
+                    }
+
+                    :hover{
+                       color: rgb(0, 102, 255);
+                       border-bottom: 3px solid rgb(0, 102, 255);
+                       padding-bottom: 72px;
+                    }
+                }
+            }
+            
+        }
     }
 
     #main {
