--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -48,6 +48,13 @@
         }
     }
 
+    #jumbotron {
+        background-image: url("/storage/assets/jumbotron.jpg");
+        background-size: cover;
+        // background-position: center;
+        height: 50%;
+    }
+
     #main {
         text-align: center;
         background-color: yellow;
