--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -50,9 +50,33 @@
 }
 
 * #main {
-  text-align: center;
-  background-color: yellow;
-  height: 50%;
+  background-color: #1c1c1c;
+  padding: 15px 14% 50px;
+  color: white;
+}
+
+* #main .card {
+  width: 15.8333333333%;
+  height: auto;
+  display: inline-block;
+  padding: 2% 0;
+}
+
+* #main .card p,
+* #main .card span {
+  font-size: 10px;
+}
+
+* #main .card .copertina {
+  height: auto;
+  width: 150px;
+}
+
+* #main .card .copertina img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 * #footer {
