--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -56,9 +56,32 @@
     }
 
     #main {
-        text-align: center;
-        background-color: yellow;
-        height: 50%;
+        background-color: #1c1c1c;
+        padding: 15px 14% 50px;
+        color: white;
+
+        .card {
+            width: calc(95% / 6);
+            height: auto;
+            display: inline-block;
+            padding: 2% 0;
+    
+            p,span {
+                font-size: 10px;
+            }
+    
+            .copertina {
+                height: auto;
+                width: 150px;
+    
+                img {
+                    object-fit: contain;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            
+        }
     }
 
     #footer {
