--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -39,8 +39,8 @@
 
 * header .menu ul li :hover {
   color: #0066ff;
-  border-bottom: 3px solid #0066ff;
-  padding-bottom: 72px;
+  border-bottom: 5px solid #0066ff;
+  padding-bottom: 69.4px;
 }
 
 * #jumbotron {
@@ -53,6 +53,8 @@
   background-color: #1c1c1c;
   padding: 15px 14% 50px;
   color: white;
+  position: relative;
+  height: auto;
 }
 
 * #main .card {
@@ -79,9 +81,55 @@
   height: 100%;
 }
 
-* #footer {
-  text-align: center;
-  background-color: green;
-  height: 25%;
+* #main .bottone {
+  position: absolute;
+  background-color: #0282f9;
+  bottom: 0.15px;
+  left: 50%;
+  padding: 7px 50px;
+  transform: translate(-50%, -50%);
+  height: 5%;
+}
+
+* #main .bottone :hover {
+  color: blue;
+  cursor: pointer;
+}
+
+* #main .bottone h5 {
+  color: white;
+  width: auto;
+}
+
+* #footer .link {
+  background-color: #0282f9;
+  width: 100%;
+  height: 140px;
+  padding: 1% 14%;
+}
+
+* #footer .link ul {
+  list-style-type: none;
+  line-height: 600%;
+  display: flex;
+  justify-content: space-between;
+}
+
+* #footer .link ul img {
+  width: 25%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+* #footer .link ul li {
+  margin: 0 20px;
+  width: 20%;
+}
+
+* #footer .link ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 10px;
+  display: inline;
 }
 
