--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -39,8 +39,8 @@
 
                     :hover{
                        color: rgb(0, 102, 255);
-                       border-bottom: 3px solid rgb(0, 102, 255);
-                       padding-bottom: 72px;
+                       border-bottom: 5px solid rgb(0, 102, 255);
+                       padding-bottom: 69.4px;
                     }
                 }
             }
@@ -59,6 +59,8 @@
         background-color: #1c1c1c;
         padding: 15px 14% 50px;
         color: white;
+        position: relative;
+        height: auto;
 
         .card {
             width: calc(95% / 6);
@@ -82,11 +84,67 @@
             }
             
         }
+
+        .bottone {
+            position: absolute;
+            background-color: #0282f9;
+            bottom: 0.15px;
+            left: 50%;
+            padding: 7px 50px;
+            transform: translate(-50%, -50%);
+            height: 5%;
+
+            :hover {
+                color: blue;
+                cursor: pointer;
+            }
+      
+            h5 {
+            color: white;
+            width: auto;
+            }
+        }
     }
 
     #footer {
-        text-align: center;
-        background-color: green;
-        height: 25%;
+
+        .link {
+            
+            background-color: #0282f9;
+            width: 100%;
+            height: 140px;
+            padding: 1% 14%;
+            
+            ul {
+                list-style-type: none;
+                line-height: 600%;
+                display: flex;
+                justify-content: space-between;
+    
+                img {
+                    width: 25%;
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+    
+                li {
+                    
+                    margin: 0 20px;
+                    width: calc(100% / 5);
+    
+                    a {
+                        text-decoration: none;
+                        color: white;
+                        font-size: 10px;
+                        display: inline;
+                        }
+    
+                }
+                
+                
+                
+            }
+        }
+        
     }
 }
